; ModuleID = '/home/carl/AnghaBench/git/extr_http-backend.c_copy_request.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-backend.c_copy_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"error reading request body\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i64)* @copy_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy_request(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = call i64 @read_request(i32 0, i8** %7, i64 %9)
  store i64 %10, i64* %8, align 8
  %11 = load i64, i64* %8, align 8
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = call i32 @die_errno(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %3
  %16 = load i32, i32* %5, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = load i64, i64* %8, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @write_to_child(i32 %16, i8* %17, i64 %18, i8* %19)
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @close(i32 %21)
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @free(i8* %23)
  ret void
}

declare dso_local i64 @read_request(i32, i8**, i64) #1

declare dso_local i32 @die_errno(i8*) #1

declare dso_local i32 @write_to_child(i32, i8*, i64, i8*) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
